[CrOS Tether] Improve the InstantTethering.FeatureState metric.

Previously, nearly half of our reported metrics were in the
OTHER_OR_UNKNOWN category, which negated much of the value of this
metric.

This CL splits that category into two: SUSPENDED and SHUT_DOWN.
  * SUSPENDED is logged when the device has been put to sleep (i.e., the
    laptop lid has been closed).
  * SHUT_DOWN is now deprecated. The FeatureState metric was meant to
    provide insight into how the Tether component was being used, but
    SHUT_DOWN does not provide any insights since the Tether component
    is always eventually shut down any time the user logs out,
    regardless of any usage patterns. Thus, without this change, we
    would expect nearly half of all logs to this metric to be for
    SHUT_DOWN, which dilutes the impact of meaningful logs.

Bug: 798605, 672263
Change-Id: Ife9dd1183cea77120e2b153369be591fe806dec1
Reviewed-on: https://chromium-review.googlesource.com/849252
Reviewed-by: Steven Holte <holte@chromium.org>
Reviewed-by: Ryan Hansberry <hansberry@chromium.org>
Commit-Queue: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527412}
Former-commit-id: a34786e1db20e381158a697c052c0aab2f85285e