chrome/browser/chromeos/tether/tether_service.cc
@@ -80,10 +80,10 @@ bool TetherService::IsFeatureFlagEnabled() {
 
 // static.
 std::string TetherService::TetherFeatureStateToString(
-    TetherFeatureState state) {
+    const TetherFeatureState& state) {
   switch (state) {
-    case (TetherFeatureState::OTHER_OR_UNKNOWN):
-      return "[other or unknown]";
+    case (TetherFeatureState::SHUT_DOWN):
+      return "[TetherService shut down]";
     case (TetherFeatureState::BLE_ADVERTISING_NOT_SUPPORTED):
       return "[BLE advertising not supported]";
     case (TetherFeatureState::NO_AVAILABLE_HOSTS):
@@ -100,10 +100,17 @@ std::string TetherService::TetherFeatureStateToString(
       return "[Enabled]";
     case (TetherFeatureState::BLE_NOT_PRESENT):
       return "[BLE is not present on the device]";
-    default:
+    case (TetherFeatureState::WIFI_NOT_PRESENT):
+      return "[Wi-Fi is not present on the device]";
+    case (TetherFeatureState::SUSPENDED):
+      return "[Suspended]";
+    case (TetherFeatureState::TETHER_FEATURE_STATE_MAX):
       // |previous_feature_state_| is initialized to TETHER_FEATURE_STATE_MAX,
       // and this value is never actually used in practice.
       return "[TetherService initializing]";
+    default:
+      NOTREACHED();
+      return "[Invalid state]";
   }
 }
 
@@ -378,7 +385,8 @@ TetherService::GetTetherTechnologyState() {
   }
 
   switch (new_feature_state) {
-    case OTHER_OR_UNKNOWN:
+    case SHUT_DOWN:
+    case SUSPENDED:
     case BLE_NOT_PRESENT:
     case BLE_ADVERTISING_NOT_SUPPORTED:
     case WIFI_NOT_PRESENT:
@@ -493,8 +501,11 @@ bool TetherService::IsEnabledbyPreference() const {
 }
 
 TetherService::TetherFeatureState TetherService::GetTetherFeatureState() {
-  if (shut_down_ || suspended_)
-    return OTHER_OR_UNKNOWN;
+  if (shut_down_)
+    return SHUT_DOWN;
+
+  if (suspended_)
+    return SUSPENDED;
 
   if (!IsBluetoothPresent())
     return BLE_NOT_PRESENT;
@@ -529,6 +540,15 @@ TetherService::TetherFeatureState TetherService::GetTetherFeatureState() {
 void TetherService::RecordTetherFeatureState() {
   TetherFeatureState tether_feature_state = GetTetherFeatureState();
   DCHECK(tether_feature_state != TetherFeatureState::TETHER_FEATURE_STATE_MAX);
+
+  // If the feature is shut down, there is no need to log a metric. Since this
+  // state occurs every time the user logs out (as of crbug.com/782879), logging
+  // a metric here does not provide any value since it does not indicate
+  // anything about how the user utilizes Instant Tethering and would dilute the
+  // contributions of meaningful states.
+  if (tether_feature_state == TetherFeatureState::SHUT_DOWN)
+    return;
+
   UMA_HISTOGRAM_ENUMERATION("InstantTethering.FeatureState",
                             tether_feature_state,
                             TetherFeatureState::TETHER_FEATURE_STATE_MAX);
